<resources>
    <string name="app_name">week6_project</string>
    <string name="dashboard">Dashboard</string>
    <string name="food">Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calories">Calories</string>
    <string name="randomVal">00</string>
    <string name="add_new_foods">Add New Foods</string>
    <string name="record_data">Record Data</string>
    <string name="enter_calories">Enter Calories</string>
    <string name="enter_food">Enter Food</string>
    <string name="average_calories">Average Calories:</string>
    <string name="_0">0</string>
    <string name="minimum_calories">Minimum Calories:</string>
    <string name="maximum_calories">Maximum Calories</string>
</resources>