<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/foodText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginStart="70dp"/>

    <TextView
        android:id="@+id/caloriesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories"
        app:layout_constraintTop_toBottomOf="@id/foodText"
        app:layout_constraintStart_toStartOf="@id/foodText"
        android:layout_marginTop="60dp"
        />

    <EditText
        android:id="@+id/editFoodText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/enter_food"
        app:layout_constraintStart_toEndOf="@id/foodText"
        android:autofillHints=""
        app:layout_constraintTop_toTopOf="@id/foodText"
        app:layout_constraintBottom_toBottomOf="@id/foodText"
        android:layout_marginStart="30dp"/>

    <EditText
        android:id="@+id/editCaloriesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/enter_calories"
        android:autofillHints=""
        app:layout_constraintTop_toTopOf="@id/caloriesText"
        app:layout_constraintBottom_toBottomOf="@id/caloriesText"
        app:layout_constraintStart_toEndOf="@id/caloriesText"
        android:layout_marginStart="30dp"/>

    <Button
        android:id="@+id/recordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="350dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>