<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/food_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:textSize="35sp"
        android:text="@string/food"
        />


    <TextView
        android:id="@+id/calories_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="@id/literalCalories"
        android:gravity="top"
        android:text="@string/randomVal"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/literalCalories"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/calories"
        android:gravity="bottom"
        android:textSize="30sp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>