<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardFragment">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/Average_Cal_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text= "@string/average_calories" />

        <TextView
            android:id="@+id/Avg_Cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/_0"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/Min_Cal_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/minimum_calories"
            app:layout_constraintTop_toBottomOf="@id/Average_Cal_Text"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/Min_Cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="370dp"
            android:text="@string/_0"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@id/Avg_Cal"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            />


        <TextView
            android:id="@+id/Max_Cal_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/maximum_calories"
            app:layout_constraintTop_toBottomOf="@id/Min_Cal_Text"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/Max_Cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="370dp"
            android:text="@string/_0"
            android:textSize="30sp"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Min_Cal"
            android:layout_marginEnd="10dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>